removed estate planning

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,7 +38,7 @@
 				<div class="break"></div>
 				<h4><span>Who do we represent?</span></h4>
 					<p class="second">
-					Noel and his firm represent clients from Baldwin, Mobile, and Escambia Counties, on cases involving accident injuries, estate planning, municipal court, and more. </p>
+					Noel and his firm represent clients from Baldwin, Mobile, and Escambia Counties, on cases involving accident injuries and more.</p>
 					<!-- <p class="second">If you are suffering from a serious injury caused by a motorcycle, automobile, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel and his firm can help.</p> -->
 
 					<p>Noel B. Leonard Attorney, LLC employs a knowledgeable staff. Our team is capable of addressing your legal concerns, and helping you to understand your rights.</p>
@@ -98,7 +98,7 @@
 					</div>
 				</div>
 
-				<div class="practice-box extra">
+				<!-- <div class="practice-box extra">
 					<div class="top">
 						<h4>Estate Planning</h4>
 						<p>Attorney Leonard offers a number of Estate Planning services.
@@ -109,7 +109,7 @@
 					<div class="btm">
 						<p><b>Noel and his firm also assist clients with Municipal Court Cases, Deeds, and Titles.</b></p>
 					</div>
-				</div>
+				</div> -->
 
 				<div class="practice-box cbox">
 					<div class="cbox">
