--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -161,10 +161,11 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			background-size: 55%;
 			position: relative;z-index: 0;
 			background-image: url(image_path('speed-bike.jpg'));
+			// width: 50%; @include center-block();
 
 			&::before {@include before(); @include ease2();}
 			&.auto {background-image: url(image_path('texting.jpg'));}
-			&.trucker {background-image: url(image_path('cargo.jpg'));background-position: bottom right;}
+			&.trucker {background-image: url(image_path('cargo.jpg'));}
 			hr.fancy{margin-top: 15px; margin-bottom: 40px;}
 			.text {width: 45%; float: left;display: inline-block; height: 100%; background-color: darken($blue, 15%); padding: 20px; h4{margin-top:25%;}}
 			.content {width: 55%; float: right; height: 100%; @include ease(); display: none; padding: 35px 15px;
@@ -184,7 +185,8 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			}
 
 			&.cbox {background-image: url(image_path('traffic.jpg')); background-size: 100%;
-				width:94%; height:auto; @include center-block();
+				// width:94%; height:auto; @include center-block();
+				width: 45%;
 				.overlay {@include sec-default(); background-color: rgba(lighten($lt-blue, 5%), .94); padding: 30px 0px 20px; }
 				h4{font-weight: bold; line-height: 1.5em; color: $dark;
 					a, span {color: $blue; font-weight: bold; }
@@ -280,7 +282,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 					p.last{margin-bottom: 25px;}
 				}
 
-				&.cbox {
+				&.cbox {width: 85%; float: none; @include center-block();
 					.overlay {padding: 25px 0px 15px;  }
 					hr {margin: 15px auto 20px; }
 				}
