--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,17 +2,16 @@
 <li class="menu-item"><%= link_to "Motorcycle Accidents", motorcycle_accidents_path %></li>
 <li class="menu-item"><%= link_to "Auto Accidents", auto_accidents_path %></li>
 <li class="menu-item"><%= link_to "18-Wheeler Accidents", trucker_accidents_path %></li>
-  <li class="menu-item has-child"><a class="mom" href="#">Other Services</a>
-		<div class="dropdown">
-      <div class="dropdown-inner">
-        <ul class="dropdown-items">
-					<li class="menu-item"><%= link_to "Wills, Trusts, and Estates", wills_trusts_estate_path %></li>
-					<!-- <li class="menu-item"><%= link_to "Municipal Court Cases, Deed and Title/Sales", deeds_titles_path %> </li> -->
-				</ul>
-			</div>
+<!-- <li class="menu-item has-child"><a class="mom" href="#">Other Services</a>
+	<div class="dropdown">
+    <div class="dropdown-inner">
+      <ul class="dropdown-items">
+				<li class="menu-item"><%= link_to "Wills, Trusts, and Estates", wills_trusts_estate_path %></li>
+			</ul>
 		</div>
-	</a></li>
-<li class="menu-item mob-menu"><%= link_to "Wills, Trusts, and Estates", wills_trusts_estate_path %></li>
+	</div>
+</a></li> -->
+<!-- <li class="menu-item mob-menu"><%= link_to "Wills, Trusts, and Estates", wills_trusts_estate_path %></li> -->
 <!-- <li class="menu-item mob-menu"><%= link_to "Municipal Court Cases, Deed and Title/Sales", deeds_titles_path %> </li> -->
 <li class="menu-item"><%= link_to "About", about_path %></li>
 <li class="menu-item"><%= link_to "Contact Us", contact_path %></li>
