added wills again

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -182,11 +182,19 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 				&::before {display: none;}
 				.top, .btm {@include sec-default();padding:10px 0;}
 				.top {background-color: $blue; padding: 15px 20px; margin-bottom: 15px;}
+				.btm {padding-top:5px;
+					p{font-size:15px;}
+				}
+
+				@media (max-width: 1140px) {
+					height:auto;
+				.btm {padding:5px;}
+				}
 			}
 
 			&.cbox {background-image: url(image_path('traffic.jpg')); background-size: 100%;
-				// width:94%; height:auto; @include center-block();
-				width: 45%;
+				width:94%; height:auto; @include center-block();
+				// width: 45%;
 				.overlay {@include sec-default(); background-color: rgba(lighten($lt-blue, 5%), .94); padding: 30px 0px 20px; }
 				h4{font-weight: bold; line-height: 1.5em; color: $dark;
 					a, span {color: $blue; font-weight: bold; }
@@ -281,6 +289,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 				.content {display: block; padding: 15px;
 					p.last{margin-bottom: 25px;}
 				}
+
 
 				&.cbox {width: 85%; float: none; @include center-block();
 					.overlay {padding: 25px 0px 15px;  }
