--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -98,7 +98,7 @@
 					</div>
 				</div>
 
-				<!-- <div class="practice-box extra">
+				<div class="practice-box extra">
 					<div class="top">
 						<h4>Estate Planning</h4>
 						<p>Attorney Leonard offers a number of Estate Planning services.
@@ -107,9 +107,9 @@
 						<%= link_to "Learn More", wills_trusts_estate_path, class: 'pb-links' %>
 					</div>
 					<div class="btm">
-						<p><b>Noel and his firm also assist clients with Municipal Court Cases, Deeds, and Titles.</b></p>
+						<p>Noel and his firm also assist clients with Municipal Court Cases, Deeds, and Titles.</p>
 					</div>
-				</div> -->
+				</div>
 
 				<div class="practice-box cbox">
 					<div class="cbox">
