--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,6 +2,22 @@
 <li class="menu-item"><%= link_to "Motorcycle Accidents", motorcycle_accidents_path %></li>
 <li class="menu-item"><%= link_to "Auto Accidents", auto_accidents_path %></li>
 <li class="menu-item"><%= link_to "18-Wheeler Accidents", trucker_accidents_path %></li>
+
+
+
+<!-- <li class="menu-item has-child"><a class="mom" href="#">Practice Areas</a>
+	<div class="dropdown">
+    <div class="dropdown-inner">
+      <ul class="dropdown-items">
+				<li class="menu-item"><%= link_to "Gulf Shores Injury Lawyer", gulf_shores_injury_lawyer_path %></li>
+				<li class="menu-item"><%= link_to "Orange Beach Injury Lawyer", orange_beach_injury_lawyer_path %></li>
+				<li class="menu-item"><%= link_to "Foley Injury Lawyer", foley_injury_lawyer_path %></li>
+			</ul>
+		</div>
+	</div>
+</a></li> -->
+
+
 <li class="menu-item has-child"><a class="mom" href="#">Other Services</a>
 	<div class="dropdown">
     <div class="dropdown-inner">
