--- a/app/views/practice_areas/gulf-shores-injury-lawyer.html.erb
+++ b/app/views/practice_areas/gulf-shores-injury-lawyer.html.erb
@@ -3,7 +3,7 @@
 
 <div class="pa-body">
 	<div class="sec1">
-		<h1>Attorney Noel Leonard is a Gulf Shores<br> Personal Injury and Car Accident Attorney</h1>
+		<h1>Attorney Noel Leonard is a Gulf Shores<br> <span>Personal Injury and Car Accident Attorney</span></h1>
 		<div class="title-line"></div><div class="clearfix"></div>
 
 		<div class="inside mid2">
