--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -76,6 +76,10 @@
         @media (max-width: 1025px) { @content ; }
     }
 
+    @else if $point == tn {
+        @media (max-width: 823px)  { @content ; }
+    }
+
     @else if $point == md {
         @media (max-width: 768px)  { @content ; }
     }
