--- a/app/views/practice_areas/orange-beach-injury-lawyer.html.erb
+++ b/app/views/practice_areas/orange-beach-injury-lawyer.html.erb
@@ -3,10 +3,10 @@
 
 <div class="pa-body">
 	<div class="sec1">
-		<h1>Attorney Noel Leonard is an <br>Orange Beach Personal Injury Attorney</h1>
+		<h1>Attorney Noel Leonard is an <br><span>Orange Beach Personal Injury Attorney</span></h1>
 		<div class="title-line"></div><div class="clearfix"></div>
 
-		<div class="inside">
+		<div class="inside mid2">
 			<div class="left">
 				<!-- <h2>DON’T TAKE A CHANCE ON BEHALF OF YOUR FAMILY WHEN YOUR HEALTH, JOB, MEDICAL BILLS, AND FUTURE COULD BE AT STAKE.</h2> -->
 				<h2>Don't take a chance on behalf of your family when your health, job, medical bills, and future could be at stake.</h2>
@@ -22,7 +22,7 @@
 		<div class="inside mid">
 			<p>Attorney Noel Leonard is an Orange Beach personal injury attorney that provides free consultations to serious accident victims and their family members. We review our clients' cases, and carefully explain the process for personal injury claims. Noel is an Orange Beach Injury Attorney less than 20-minutes from Canal Road.</p>
 			<p class="cta">Contact us any time: 24 hours a day, 7 days a week.<br>
-				Call <a href="tel:2519438638">251-943-8638</a>, or <%= link_to "contact us online", contact_path, class: 'text-link' %>.</p> 
+				Call <a href="tel:2519438638">251-943-8638</a>, or <%= link_to "contact us online", contact_path, class: 'text-link' %>.
 			</p>
 		</div>
 	</div>
