--- a/app/views/practice_areas/foley-injury-lawyer.html.erb
+++ b/app/views/practice_areas/foley-injury-lawyer.html.erb
@@ -25,7 +25,9 @@
 		<div class="inside mid2">
 			<p>At the Law Offices of Noel Leonard, our Foley Injury law team fights to get the best possible result in personal injury cases of all types.
 			We bring over a decade of experience to your case.</p>
-			<p class="cta"> Call us at <a href="tel:2519438638">251-943-8638</a> or <%= link_to "contact us online now.", contact_path, class: 'text-link' %>
+			<!-- <p class="cta"> Call us at <a href="tel:2519438638">251-943-8638</a> or <%= link_to "contact us online now.", contact_path, class: 'text-link' %> -->
+				<a class="cta-btn" href="tel:2519438638">Call: 251-943-8638</a>
+				<%= link_to "contact us online", contact_path, class: 'cta-btn' %>
 			</p>
 		</div>
 	</div>
@@ -36,7 +38,7 @@
 			<div class="left">
 				<h4>Helping Injury Victims In Foley</h4>
 				<div class="title-line left"></div><div class="clearfix"></div>
-				<p>Leonard Injury Law is an injury law firm that handles your case, no matter if it involves injuries to children or adults.
+				<p>We are an injury law firm that handles your case, no matter if it involves injuries to children or adults.
 				We will work with you to learn what you want from your case, whether your goal is to: <span>maximize compensation, move on from your accident or injury and get a settlement in a timely manner, or even to get the negligent party's acknowledgement of fault.</span></p>
 				<p class="last">We are the Foley Injury Law Firm that will do everything we can to get the result that is right for you.</p>
 			</div>
