--- a/app/views/practice_areas/gulf-shores-injury-lawyer.html.erb
+++ b/app/views/practice_areas/gulf-shores-injury-lawyer.html.erb
@@ -21,7 +21,9 @@
 	<div class="sec-bg">
 		<div class="inside">
 			<p>If you are in the Gulf Shores area, contact Injury Attorney Noel Leonard today for a completely free consultation:</p>
-			<p class="cta">Call <a href="tel:2519438638">251-943-8638</a>, or <%= link_to "click here", contact_path, class: 'text-link' %> to contact us online</p> 
+			<!-- <p class="cta">Call <a href="tel:2519438638">251-943-8638</a>, or <%= link_to "click here", contact_path, class: 'text-link' %> to contact us online</p>  -->
+			<a class="cta-btn" href="tel:2519438638">Call: 251-943-8638</a>
+				<%= link_to "contact us online", contact_path, class: 'cta-btn' %>
 		</div>
 	</div>
 
@@ -29,7 +31,7 @@
 		<div class="inside mid2">
 			<h2>Leonard Injury Law: Car Accident & Injury Attorney</h2>
 			<div class="title-line"></div><div class="clearfix"></div>
-			<p>A good injury attorney has to work hard on behalf of their clients. Noel knows how injury law works, and he works hard for you. <span>We care because we are a local injury law firm.</span> Attorney Noel Leonard is one of the few Gulf Shores Personal Injury Lawyers that is local to Gulf Shores, and not just a satellite office for a lawyer outside Baldwin County. The wins we secure are the result of our ability to work doggedly on behalf of our injured clients. <span>We care about our neighbors, and we know how to win. </span></p>
+			<p>A good injury attorney has to work hard on behalf of their clients. Noel knows how injury law works, and he works hard for you. <span>We care because we are a local injury law firm.</span> Attorney Noel Leonard is one of the few Gulf Shores Personal Injury Lawyers that is an actual Gulf Shores neighbor, and not just a satellite office for a lawyer outside Baldwin County. The wins we secure are the result of our ability to work doggedly on behalf of our injured clients. <span>We care about our neighbors, and we know how to win. </span></p>
 		</div>
 	</div>
 </div>
