--- a/app/views/practice_areas/orange-beach-injury-lawyer.html.erb
+++ b/app/views/practice_areas/orange-beach-injury-lawyer.html.erb
@@ -13,7 +13,7 @@
 			</div>
 
 			<div class="right">
-				<p>Get a Personal Injury Attorney local to Orange Beach, not just another lawyer’s satellite office. Attorney Noel Leonard will answer your call, and give your family an opportunity to be compensated for the unfortunate tragedy and injury that has derailed your everyday lifestyle. <span>If you are unable to meet at our office, we are eager to accommodate you to discuss your legal needs.</span></p>
+				<p>Get a Personal Injury Attorney local to Orange Beach, not just another lawyer’s satellite office. Attorney Noel Leonard will answer your call, and give your family an opportunity to be compensated for any unfortunate tragedy and injury that has derailed your everyday lifestyle. <span>If you are unable to meet at our office, we are eager to accommodate you to discuss your legal needs.</span></p>
 			</div>
 		</div>
 	</div>
@@ -21,9 +21,10 @@
 	<div class="sec-bg">
 		<div class="inside mid">
 			<p>Attorney Noel Leonard is an Orange Beach personal injury attorney that provides free consultations to serious accident victims and their family members. We review our clients' cases, and carefully explain the process for personal injury claims. Noel is an Orange Beach Injury Attorney less than 20-minutes from Canal Road.</p>
-			<p class="cta">Contact us any time: 24 hours a day, 7 days a week.<br>
-				Call <a href="tel:2519438638">251-943-8638</a>, or <%= link_to "contact us online", contact_path, class: 'text-link' %>.
-			</p>
+			<p class="cta">Contact us any time: 24 hours a day, 7 days a week.</p>
+				<!-- <span>Call <a href="tel:2519438638">251-943-8638</a>, or <%= link_to "contact us online", contact_path, class: 'text-link' %>.</span> -->
+				<a class="cta-btn" href="tel:2519438638">Call: 251-943-8638</a>
+				<%= link_to "contact us online", contact_path, class: 'cta-btn' %>
 		</div>
 	</div>
 
@@ -36,7 +37,7 @@
 			</div>
 
 			<div class="right">
-				<p>If you or a loved one has been injured in a serious accident around Orange Beach or Gulf Shores, hiring the right personal injury attorney in the Orange Beach area is important. Put Leonard Injury Law’s experience in your corner today, and let him fight to get you the compensation you deserve.</p>
+				<p>If you or a loved one has been injured in a serious accident around Orange Beach or Gulf Shores, hiring the right personal injury attorney in the Orange Beach area is important. Put Noel’s experience in your corner today, and let him fight to get you the compensation you deserve.</p>
 			</div>
 		</div>
 	</div>
