--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,10 +2,9 @@
 <li class="menu-item"><%= link_to "Motorcycle Accidents", motorcycle_accidents_path %></li>
 <li class="menu-item"><%= link_to "Auto Accidents", auto_accidents_path %></li>
 <li class="menu-item"><%= link_to "18-Wheeler Accidents", trucker_accidents_path %></li>
+<li class="menu-item mob-menu"><%= link_to "Wills, Trusts, and Estates", wills_trusts_estate_path %></li>
 
-
-
-<!-- <li class="menu-item has-child"><a class="mom" href="#">Practice Areas</a>
+<li class="menu-item has-child"><a class="mom" href="#">Practice Areas</a>
 	<div class="dropdown">
     <div class="dropdown-inner">
       <ul class="dropdown-items">
@@ -15,8 +14,7 @@
 			</ul>
 		</div>
 	</div>
-</a></li> -->
-
+</a></li>
 
 <li class="menu-item has-child"><a class="mom" href="#">Other Services</a>
 	<div class="dropdown">
@@ -27,8 +25,10 @@
 		</div>
 	</div>
 </a></li>
-<li class="menu-item mob-menu"><%= link_to "Wills, Trusts, and Estates", wills_trusts_estate_path %></li>
-<!-- <li class="menu-item mob-menu"><%= link_to "Municipal Court Cases, Deed and Title/Sales", deeds_titles_path %> </li> -->
+
+<li class="menu-item mob-menu"><%= link_to "Gulf Shores Injury Lawyer", gulf_shores_injury_lawyer_path %></li>
+<li class="menu-item mob-menu"><%= link_to "Orange Beach Injury Lawyer", orange_beach_injury_lawyer_path %></li>
+<li class="menu-item mob-menu"><%= link_to "Foley Injury Lawyer", foley_injury_lawyer_path %></li>
 <li class="menu-item"><%= link_to "About", about_path %></li>
 <li class="menu-item"><%= link_to "Contact Us", contact_path %></li>
 <li class="menu-item"><%= link_to "Resources", resources_path %></li>
