--- a/app/views/practice_areas/orange-beach-injury-lawyer.html.erb
+++ b/app/views/practice_areas/orange-beach-injury-lawyer.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = "Orange Beach Injury Lawyer" %>
-<% @page_description = "" %>
+<% @page_description = "Noel Leonard is a personal injury attorney serving accident victims in the Orange Beach area. If you or a loved one has been injured in an accident, schedule a free consultation with Attorney Leonard today to learn more about your options." %>
 
 <div class="pa-body">
 	<div class="sec1">
