--- a/app/views/mobileals/new.html.erb
+++ b/app/views/mobileals/new.html.erb
@@ -34,32 +34,32 @@
 
               <div class="form-group name">
                 <p>*First Name:</p>
-                <%= mobileal.text_field :first_name %>
+                <%= mobileal.text_field :first_name, onpaste: "return false" %>
               </div>
 
               <div class="form-group last-name">
                 <p>*Last Name: </p>
-                <%= mobileal.text_field :last_name %>
+                <%= mobileal.text_field :last_name, onpaste: "return false" %>
               </div>
 
               <div class="form-group phone">
                 <p>*Phone Number: </p>
-                <%= mobileal.text_field :phone %>
+                <%= mobileal.text_field :phone, onpaste: "return false" %>
               </div>
 
               <div class="form-group email">
                 <p>*Email address: </p>
-                <%= mobileal.email_field :email %>
+                <%= mobileal.email_field :email, onpaste: "return false" %>
               </div>
 
               <div class="form-group address">
                 <p>*Address: </p>
-                <%= mobileal.text_field :address %>
+                <%= mobileal.text_field :address, onpaste: "return false" %>
               </div>
 
               <div class="form-group message">
                 <p>*Tell us about your case: </p>
-                <%= mobileal.text_area :content %>
+                <%= mobileal.text_area :content, onpaste: "return false" %>
               </div>
 
               <div class="form-group honey">
