added recaptcha gem, testing calls on heroku

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -87,6 +87,9 @@
     </div>
   </div>
   <a href="#" class="scroll-up">Scroll</a>
+
+  <small>se: <%= ENV['RECAPTCHA_SECRET_KEY'] %></small> &nbsp; &nbsp; | &nbsp; &nbsp;
+  <small>si: <%= ENV['RECAPTCHA_SITE_KEY'] %></small>
 </footer>
 
 
