--- a/app/views/mobileals/new.html.erb
+++ b/app/views/mobileals/new.html.erb
@@ -68,6 +68,12 @@
                 <span class="help">Do not fill in this field. It is an anti-spam measure.</span>
               </div>
 
+              <div class="form-group recap">
+                <% if ENV["RECAPTCHA_SITE_KEY"] != nil %>
+                  <%= recaptcha_tags %>
+                <% end %>
+              </div>
+
               <div class="form-group submit">
                 <%= mobileal.submit "Submit", :class=> "send-message" %>
               </div>
