switched all mailers back, fixed mobileal error page

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1383,7 +1383,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	@include bp(tb) { .video-row {padding: 30px 0; } }
 }
 
-.mobileals.new {
+.mobileals.new, .mobile-accident-attorney {
 	.header-new{margin-top: -1px;
 		.topbar, .logo-block, .main-block{display: none; }
 		.main-header{padding:0; }
