--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -14,6 +14,7 @@ $lt-blue: #b2cfe7;
 $tan: #dbd3c7;
 $silver:#ecf0f1;
 $lgray: #d4d8d8;
+$red:#E60000;
 
 $open: 'Open Sans', Arial, sans-serif;
 $cinzel: 'Cinzel', serif;
