--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -60,3 +60,20 @@
       </ul>
     </div>
 </header>
+
+<div class="covid-bar">
+  <div class="inside">
+   
+    <p>
+      Our team is <span>still working</span> while taking the necessary precautions to prevent the spread of COVID-19.<br>
+      
+      <!-- We will remain available to our clients through phone and video conferencing. -->
+       Free consults have never been easier - phone and video conferences available for all current and new clients. 
+    </p>
+  </div>
+</div>
+
+
+
+
+
